--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
         checkWeather(searchBox.value);
         searchBox.value = "";
       });
+
+
+      
+      <div class="main-div-1111">
+      <div class="main-1111">
+        <div class="git-hub-1111"></div>
+        <a href="https://www.linkedin.com/in/hricheak-ghosh/" target="_blank"
+          >Git-hub</a
+        >
+      </div>
+
+      <div class="main-2222">
+        <div class="linkedin-1111"></div>
+        <a href="https://github.com/Rich-1007?tab=repositories" target="_blank"
+          >Linkedin</a
+        >
+      </div>
+    </div>
+
+      
     </script>
   </body>
 </html>
